modif index twig et base

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # the latter taking precedence over the former:
 #
 #  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
+#  * ..env.local          uncommitted file with local overrides
 #  * .env.$APP_ENV       committed environment-specific defaults
 #  * .env.$APP_ENV.local uncommitted environment-specific overrides
 #
@@ -25,7 +25,7 @@ APP_SECRET=d25eb1c2aa2766b320ff71d15ce426d1
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
